--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -11,10 +11,10 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-     -name: Compile
-      run: echo Hello, world!
+      - name: Compile
+        run: echo Hello, world!
 
   DeployDev:
     name: Deploy to Dev
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Development
-      url: 'http://dev.myapp.com'
+      url: "http://dev.myapp.com"
     steps:
       - name: Deploy
         run: echo I am deploying!
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Staging
-      url: 'http://test.myapp.com'
+      url: "http://test.myapp.com"
     steps:
       - name: Deploy
         run: echo I am deploying!
@@ -46,14 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Production
-      url: 'http://www.myapp.com'
+      url: "http://www.myapp.com"
     steps:
       - name: Deploy
         run: echo I am deploying!
-    
-    
-          
-          
-   
-    
-    
