--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -39,10 +39,21 @@ jobs:
     steps:
       - name: Deploy
         run: echo I am deploying!
-
+        
+  DeployTesting:
+    name: Deploy to Testing
+    needs: [DeployStaging]
+    runs-on: ubuntu-latest
+    environment:
+      name: Testing
+      url: "http://prod.myapp.com"
+    steps:
+      - name: Deploy
+        run: echo I am deploying!
+    
   DeployProd:
     name: Deploy to Production
-    needs: [DeployStaging]
+    needs: [DeployTesting]
     runs-on: ubuntu-latest
     environment:
       name: Production
